--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     Welcome. More to come. Thank you.
+    
+    <a href='https://zenodo.org/record/3359942'>Link to article</a>
 </body>
 </html>
