--- a/index.html
+++ b/index.html
@@ -411,7 +411,9 @@
     <iframe max-width="560" max-height="315" src="https://www.youtube.com/embed/iOEJ2Z_iurM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 <p>
-  <a href="https://talkpython.fm/home">Talk Python to Me</a>
+  <iframe width="100%" height="166" scrolling="no" frameborder="no"
+     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/682878149&color=ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false">
+</iframe>
 </p>
 <p>More to come.</p>
 </article>
