--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="content">
           <div class="inner">
             <h1>Welcome</h1>
+            <a href="/Among/index.html">My new book!</a>
             <p class="left">
               My name is Cornelis, though I also go by Eric. I am a scholar of
               Islamic Studies (philosophy) and Digital Humanities (manuscripts).
