--- a/Among/index.html
+++ b/Among/index.html
@@ -19,13 +19,13 @@
     <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-		<img src="/imgs/banner.jpg" width="100%" alt="" srcset="">
+		<img src="imgs/banner.jpg" width="100%" alt="" srcset="">
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
-					<img src="/imgs/coverSmall.jpg" align="right"  alt="" srcset="">
+					<img src="imgs/coverSmall.jpg" align="right"  alt="" srcset="">
 				<h2>
 					My book is published
 				</h2>
@@ -64,7 +64,7 @@
 			<div class="row">
 				
 				<div class="col-md-12">
-						<!-- <img src="/imgs/cover.jpg" HSPACE="10" VSPACE="10" align="left" alt="" sizes="" srcset=""> -->
+						<!-- <img src="imgs/cover.jpg" HSPACE="10" VSPACE="10" align="left" alt="" sizes="" srcset=""> -->
 					<h2>General <a name="general">Summary</a></h2>
 					<p>In about 350 pages I introduce you to manuscripts in their digitized form.</p>
 					<p>Central to the first part of the book is a proposal to speak of the <strong>‘digital materiality’</strong> of digitized manuscripts. Too often we approach them as a neutral window onto the material artifact, but digitization is not a neutral (let alone enhancing) process! With ten notions (size of collection, online availability, ability to download, portal, viewer, page numbers, resolution, color balance, lighting, and cut) I propose a way of describing digitized manuscripts that does justice to both the digital data that constitute the actual, digitized manuscript, and the digital context in which this is stored or offered. To guide and give foundation to this work, I include a chapter reflecting on the differences between material manuscripts, printed publications, and digital documents.</p>
@@ -98,12 +98,12 @@
 						</p>
 				</div>
 				<div class="col-md-6">
-					<img src="/imgs/scan.jpg" width="100%" alt="" srcset="">
+					<img src="imgs/scan.jpg" width="100%" alt="" srcset="">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-						<img src="/imgs/materiality.gif" width="100%" alt="" srcset="">
+						<img src="imgs/materiality.gif" width="100%" alt="" srcset="">
 				</div>
 				<div class="col-md-6">
 						<h3>2. The Digital Materiality of Digitized Manuscripts</h3>
@@ -118,12 +118,12 @@
 						Chapter 3 takes these aspects and applies them to twenty repositories that were chosen to give a representative picture of the state of digitization of Islamic manuscripts worldwide. As many of these libraries also host manuscripts of other disciplines, readers from beyond Islamic Studies should still find this of ample interest. The result is that quality and usability varies wildly. Not all manuscripts are downloadable, which is worrisome, as is the often ambiguous legal restrictions. On the whole, digitization seems to be firing on all cylinders which is promising. I end with a SWOT-analysis to speculate on the future of these repositories.</p>
 				</div>
 				<div class="col-md-6">
-						<img src="/imgs/comparison.jpg" width="100%" alt="" srcset="">
+						<img src="imgs/comparison.jpg" width="100%" alt="" srcset="">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-						<img src="/imgs/paleography.gif" width="100%" alt="" srcset="">
+						<img src="imgs/paleography.gif" width="100%" alt="" srcset="">
 				</div>
 				<div class="col-md-6">
 					<h3>4. Paleography: Between Erudition and Computation</h3>
@@ -140,7 +140,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-						<img src="/imgs/cataloging.png" width="100%" alt="" srcset="">
+						<img src="imgs/cataloging.png" width="100%" alt="" srcset="">
 				</div>
 				<div class="col-md-6">
 					<h3>6. Cataloging: From a Dusty Backroom to the World Wide Web</h3>
@@ -153,12 +153,12 @@
 					<p>Chapter 7 provides a counter example for those who argue that codicology requires the physical manuscript. This chapter takes on a notably technical character, as I explain how I used the programming language Python and the library OpenCV to analyze the cover of several thousand digitized manuscripts. The method is automated image recognition, the aim is to say meaningful things about the shape of the codex, focussing on one particular aspect of Islamic manuscripts. Preliminary results are explained, but the chapter revolves more around introducing programming in general and Python in particular.</p>
 				</div>
 				<div class="col-md-6">
-						<img src="/imgs/codicology.gif" width="100%" alt="" srcset="">
+						<img src="imgs/codicology.gif" width="100%" alt="" srcset="">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-						<img src="/imgs/LogoSmall.jpg" width="100%" alt="" srcset="">
+						<img src="imgs/LogoSmall.jpg" width="100%" alt="" srcset="">
 				</div>
 				<div class="col-md-6">
 					<h3>8. A Digital Orientalist</h3>
