--- a/Among/index.html
+++ b/Among/index.html
@@ -216,7 +216,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<p><a name="contact">If</a> you want to collaborate, want to know more, or simply want to talk, please do get in touch! Follow me on Twitter <a href="http://twitter.com/lwcvl">@LWCvL</a> or email me at cornelisvanlit@gmail.com For the book click <a href="https://brill.com/view/title/56196">here</a> , for its stable repository click <a href="https://doi.org/10.5281/zenodo.3371200">here</a> for its online appendix click <a href="https://github.com/among/digitized-manuscripts">here</a>.</p>
+					<p><a name="touch">If</a> you want to collaborate, want to know more, or simply want to talk, please do get in touch! Follow me on Twitter <a href="http://twitter.com/lwcvl">@LWCvL</a> or email me at cornelisvanlit@gmail.com For the book click <a href="https://brill.com/view/title/56196">here</a> , for its stable repository click <a href="https://doi.org/10.5281/zenodo.3371200">here</a> for its online appendix click <a href="https://github.com/among/digitized-manuscripts">here</a>.</p>
 				</div>
 			</div>
 		</div>
