--- a/Among/index.html
+++ b/Among/index.html
@@ -36,6 +36,8 @@
 				<p>
 					<a class="btn btn-primary btn-large" href="https://brill.com/view/title/56196" target="_blank">Read it now for free</a>
 				</p>
+				<hr>
+				<p>If you like to be informed of exciting developments in digital manuscript studies:</p> <p> <a class="btn btn-success" href="https://forms.gle/KX4uHLdVq9ed8H4a7" role="button">Click here to leave your e-mail address</a> </p>
 			</div>
 			<hr>
 			<div class="row">
