--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
         </div>
         <div class="content">
           <div class="inner">
-            <h1>Welcome</h1>
-            <a href="/Among/index.html">My new book!</a>
+            
+          <div class="inner">
+            <a href="Among/index.html"><img src="Among/imgs/coverSmall.jpg" align="left" vspace="10px" alt="" srcset=""></a>
+            <h1><a href="Among/index.html">Take a look at my new book!</a></h1>
+          </div>
+          <h1>Welcome</h1>
             <p class="left">
               My name is Cornelis, though I also go by Eric. I am a scholar of
               Islamic Studies (philosophy) and Digital Humanities (manuscripts).
