--- a/Among/index.html
+++ b/Among/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="jumbotron">
+			<div>
 					<img src="imgs/coverSmall.jpg" align="right"  alt="" srcset="">
 				<h2>
 					My book is published
@@ -40,6 +40,7 @@
 				<p>If you like to be informed of exciting developments in digital manuscript studies:</p> <p> <a class="btn btn-success" href="https://forms.gle/KX4uHLdVq9ed8H4a7" role="button">Click here to leave your e-mail address</a> </p>
 			</div>
 			<hr> 
+
 			<div class="row">
 				<div class="col-md-12">
 				
