--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <div
           class="logo"
           style="background-image: url('images/001.jpg');
-						background-size: cover; width: 150px; height: 150px"
-        >
-          <!-- <span class="icon fa-star"></span> -->
+						background-size: cover; width: 150px; height: 150px">
+          
         </div>
         <div class="content">
           <div class="inner">
@@ -40,6 +39,7 @@
             <a href="Among/index.html"><img src="Among/imgs/coverSmall.jpg" align="left" vspace="10px" alt="" srcset=""></a>
             <h1><a href="Among/index.html">Take a look at my new book! </a></h1>
           </div>
+          <div>
           <h1>Welcome</h1>
             <p class="left">
               My name is Cornelis, though I also go by Eric. I am a scholar of
@@ -53,6 +53,7 @@
               the little spare time that is left I go running.
             </p>
             <p><a href="#contact">Want to connect with me? Click here</a></p>
+          </div>
           </div>
         </div>
 		<div class="menu-wrap">
