--- a/Among/index.html
+++ b/Among/index.html
@@ -7,8 +7,8 @@
 
     <title>Among Digitized Manuscripts</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="description" content="Philology, Codicology, Paleography in a Digital World (Leiden: Brill, 2020)">
+    <meta name="author" content="Cornelis van Lit">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
