--- a/Among/index.html
+++ b/Among/index.html
@@ -200,6 +200,17 @@
 						</ul>
 
 					</p>
+					<p>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Y3Ndjtd77KE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</p>
+					<p>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/iOEJ2Z_iurM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</p>
+					<p>
+						<iframe width="100%" height="166" scrolling="no" frameborder="no"
+     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/682878149&color=ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false">
+</iframe>
+					</p>
 				</div>
 			</div>
 			<hr>
