--- a/research.html
+++ b/research.html
@@ -143,7 +143,7 @@
         <div class="right-div normalText leftAligned">
 
             <p>
-                <i>In progress</i>
+                <i>In progress...</i>
             </p>
 
         </div>
