--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             
           <div class="inner">
             <a href="Among/index.html"><img src="Among/imgs/coverSmall.jpg" align="left" vspace="10px" alt="" srcset=""></a>
-            <h1><a href="Among/index.html">Take a look at my new book! </a></h1>
+            <h1><a href="Among/index.html">Take a look at my new book!</a></h1>
+		  <p>This is a handbook for anyone working with digitized manuscripts. Starting from discussing how to describe,
+		  and thereby evaluate, digital surrogates, I describe all kinds of concepts and techniques culminating in
+		  explaining how to use computer vision to automatically analyze images.</p>
           </div>
           <div>
           <h1>Welcome</h1>
