--- a/Among/index.html
+++ b/Among/index.html
@@ -25,10 +25,10 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
-					<img src="imgs/coverSmall.jpg" align="right"  alt="" srcset="">
 				<h2>
 					My book is published
 				</h2>
+				<img src="imgs/coverSmall.jpg" align="right"  alt="" srcset="">
 				<p class="lead">
 					<i>Among Digitized Manuscripts</i> is published in hardback and electronic open access. It also has an <a href="http://github.com/among/digitized-manuscripts">online appendix</a>.
 				</p>
@@ -196,13 +196,13 @@
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/Y3Ndjtd77KE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe max-width="560" height="315" src="https://www.youtube.com/embed/Y3Ndjtd77KE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</p>
 					
 				</div>
 				<div class="col-md-6">
 					<p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/iOEJ2Z_iurM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe max-width="560" height="315" src="https://www.youtube.com/embed/iOEJ2Z_iurM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</p>
 					
 				</div>
