--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
           <div class="inner">
             <a href="Among/index.html"><img src="Among/imgs/coverSmall.jpg" align="left" vspace="10px" alt="" srcset=""></a>
             <h1><a href="Among/index.html">Take a look at my new book!</a></h1>
-		  <p>This is a handbook for anyone working with digitized manuscripts. Starting from discussing how to describe,
-		  and thereby evaluate, digital surrogates, I describe all kinds of concepts and techniques culminating in
-		  explaining how to use computer vision to automatically analyze images.</p>
+		  <p>This is a handbook providing a conceptual and practical toolbox for using digital surrogates of 
+			  manuscripts. It is aimed at complete beginners but also offers material for people more 
+			  experienced with the so-called digital humanities. My examples are taken from my own field 
+			  of Islamic studies, but the same approach is applicable to any research in the humanities 
+			  in which there is no access to the material manuscript, nor to the plain text, but instead 
+			  to photos of text.</p>
           </div>
           <div>
           <h1>Welcome</h1>
