--- a/Among/index.html
+++ b/Among/index.html
@@ -15,7 +15,6 @@
 
   </head> 
   <body>
-
     <div class="container">
 	<div class="row">
 		<div class="col-md-12">
@@ -162,7 +161,7 @@
 			<div class="row">
 				<div class="col-md-6 cadet card-2">
 					<h3>9. Postscript. Among Digitized Manuscripts</h3>
-					<p>Working in manuscript studies is an extraordinary grace. In my own field, Ignati Kratchkovsky (Игнатий Крачковский) wrote beautifully about this, in his Among Arabic Manuscripts; a memoir of his experience with manuscripts throughout his life (1883–1951). He writes about what tactile interaction can do, saying for example that “Many are the hands through which it passed in Africa, Asia and Europe before it came to rest on the shelves of the Manuscript Department.” He speaks of the highs “when some discovery will gleam like a tiny spark,” and of the lows “bringing me often to the verge of despair and making me doubt my ability.” In his book, he works out what that feeling of attraction is by giving little anecdotes, or snapshots, of his interaction with manuscripts, libraries, and the people in and around them. Each snapshot sets a certain tone and gives one aspect of the multi-faceted experience of working with manuscripts. Kratchkovsky does this masterfully, especially by connecting stories in unexpected ways. What seemed an unimportant detail in one snapshot, takes a central role in another one. I think it is important to say something about what that experience is, when working with digitized manuscripts. To do that, I wish to leave you with some of my own stories, inspired in style and content by Kratchkovsky.</p>
+					<p>Working in manuscript studies is an extraordinary grace. In my own field, Ignati Kratchkovsky (Игнатий Крачковский) wrote beautifully about this, in his Among Arabic Manuscripts; a memoir of his experience with manuscripts throughout his life (1883–1951). He writes about what tactile interaction can do, saying for example that “Many are the hands through which it passed in Africa, Asia and Europe before it came to rest on the shelves of the Manuscript Department.” He speaks of the highs “when some discovery will gleam like a tiny spark,” and of the lows “bringing me often to the verge of despair and making me doubt my ability.” In his book, he works out what that feeling of attraction is by giving little anecdotes, or snapshots, of his interaction with manuscripts, libraries, and the people in and around them. Each snapshot sets a certain tone and gives one aspect of the multi-faceted experience of working with manuscripts. Kratchkovsky does this masterfully, especially by connecting stories in unexpected ways. What seemed an unimportant detail in one snapshot, takes a central role in another one. I think it is important to say something about what that experience is, when working with digitized manuscripts. To do that, I wish to leave you with some of my own stories, inspired in style and content by Kratchkovsky.</p>
 				</div>
 				<div class="col-md-6">
 						<img src="imgs/kratch.jpg" width="100%" alt="" srcset="">
