--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Personal website of Dr. L.W. Cornelis van Lit/title>
+    <title>Personal website of Dr. L.W. Cornelis van Lit</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -437,7 +437,9 @@
 
 </article>
 <!-- About -->
-
+<article id="about">
+  
+</article>
         <!-- Contact -->
         <article id="contact" style="background-color:silver">
           <h2>How to get connected</h2>
