--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Personal website with all publications of Cornelis van Lit about digital humanities and islamic studies">
+  <meta name="author" content="Dr. Lambertus Willem Cornelis van Lit, O.P.">
+  <meta name="keywords" content="Lambertus, Willem, Cornelis, van, Lit, Eric, O.P., (Eric), L.W.C., L. W. C., van Lit, Digital, Humanities, Islamic, Studies, Manuscripts, Philology, Commentaries, Commentary, Tradition">
 
-
-  <title>CV</title>
-
-  <!-- Bootstrap core CSS -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-
+  <title>Personal website of Cornelis van Lit</title>
+  
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="cvStyle.css">
@@ -40,6 +37,7 @@
       </p>
       <hr>
       <p><img src="images/Logo.DO.svg" alt="" srcset="" width="20rem" height="20rem"> <a href="http://www.digitalorientalist.com">Read my magazine The Digital Orientalist</a></p>
+      <p><a href="publications/index.html">Click here for all my publications, videos, and podcasts</a></p>
 
     </div>
 
