thematic pages linked

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 
     <div class="container">
         <h1>Cornelis van Lit</h1>
-        <p>Welcome to my website. This page is currently under construction, displaying only a limited number of
-            publications. You can browse through all my publications below, or
-            visit my thematic page on my project on digital manuscript studies here and on my current project on Ibn
-            ʿArabī's Reshaping of the Muslim Imagination here.</p>
+        <p>Welcome to my website. While I continue to add content, you can browse through all my publications below, or
+            visit my thematic page on my project on digital manuscript studies <a href="Among/index.html">here</a> and on my current project on Ibn
+            ʿArabī's Reshaping of the Muslim Imagination <a href="World/index.html">here</a>.</p>
 
         <div class="filters">
 
