added link to newsletter

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             visit my thematic page on my project on digital manuscript studies <a href="Among/index.html">here</a> and on my current project on Ibn
             ʿArabī's Reshaping of the Muslim Imagination <a href="World/index.html">here</a>.</p>
 
+            <p>Came here for digitized manuscripts? <a href="https://mailchi.mp/4e6976ad6bd6/among-digitized-manuscripts">Subscribe to my newsletter now.</a> and if you haven't <a href="https://brill.com/view/title/56196">check out my book here.</a></p>
+
         <div class="filters">
 
             <div class="ui-group">
