--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
-        content="Lambertus, Willem, Cornelis, van, Lit, Eric, O.P., (Eric), L.W.C., L. W. C., van Lit, Digital, Humanities, Islamic, Studies, Manuscripts, Philology, Commentaries, Commentary, Tradition">
+        content="Lambertus, Willem, Cornelis, van, Lit, Eric, (Eric), L.W.C., L. W. C., van Lit, Digital, Humanities, Islamic, Studies, Manuscripts, Philology, Commentaries, Commentary, Tradition">
 
 
 
@@ -38,6 +38,7 @@
             visit my thematic page on my project on digital manuscript studies <a href="Among/index.html">here</a> and on my current project on Ibn
             ʿArabī's Reshaping of the Muslim Imagination <a href="World/index.html">here</a>.</p>
 
+            <p style="text-align:right">Klik hier voor <a href="kebbieketsj/index.html">Kebbieketsj Consultancy</a></p>
             <p>Came here for digitized manuscripts? <a href="https://mailchi.mp/4e6976ad6bd6/among-digitized-manuscripts">Subscribe to my newsletter now.</a> and if you haven't already, <a href="https://brill.com/view/title/56196">check out my book here.</a></p>
 
         <div class="filters">
