--- a/kebbieketsj/index.html
+++ b/kebbieketsj/index.html
@@ -55,6 +55,14 @@
             <p style='padding-left: 5px;'><b>Uiteindelijke resultaat:</b> nog dezelfde maand als het ingaan van de nieuwe wetgeving, eerder dan welke concurrent, heeft het bedrijf de nieuwe app in productie kunnen nemen.</p>
             <p style='padding-left: 5px; padding-bottom: 5px;'><b>Gebruikte technologie:</b> Claris FileMaker.</p>
         </div>
+        <div class='voorbeeld' style="background-image: linear-gradient(rgb(132, 193, 250),rgb(196, 226, 254))">
+            <h4 style='padding-left: 5px;'>Corona-crisis interim management</h4>
+            <p style='padding-left: 5px;'>
+                Een klein bedrijf zat zonder directie in een tijd waarin omzet tot onder de 10% kelderde vanwege overheidsmaatregelen tegen de verspreiding van het corona-virus.
+            </p>
+            <p style='padding-left: 5px;'><b>Uiteindelijke resultaat:</b> Het jaar is break-even afgesloten, met uitzicht op een gezonde toekomst.</p>
+            <p style='padding-left: 5px; padding-bottom: 5px;'><b>Gebruikte middelen:</b>Herschrijven strategisch plan. Herindelen taken en functies. Klantenbinding kapitaliseren. En vooral veel, heel veel coachen en enthousiasmeren van het personeel.</p>
+        </div>
     </div>
 </body>
 
