updated with new book

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 
         
-        <p>Welcome to my website. You can browse through all my publications below, or
+        <p>Welcome to my website. I develop digital methods and data analysis for historical research. My personal expertise is in applying this to Arabic texts from the Islamic world. You can browse through all my publications below, or
             visit my thematic page on my project on digital manuscript studies <a href="Among/index.html">here</a> and on my current project on Ibn
             ʿArabī's Reshaping of the Muslim Imagination <a href="World/index.html">here</a>.</p>
 
-            <p style="text-align:right">Klik hier voor <a href="kebbieketsj/index.html">Kebbieketsj Consultancy</a></p>
+            <!-- <p style="text-align:right">Klik hier voor <a href="kebbieketsj/index.html">Kebbieketsj Consultancy</a></p> -->
             <p>Came here for digitized manuscripts? <a href="https://mailchi.mp/4e6976ad6bd6/among-digitized-manuscripts">Subscribe to my newsletter now.</a> and if you haven't already, <a href="https://brill.com/view/title/56196">check out my book here.</a></p>
 
         <div class="filters">
@@ -127,13 +127,41 @@
                             </blockquote>
                         </div>
                         <div class="card-action">
-                            <a class="amber-text text-darken-4" href="#">Buy a hardback copy or read digitally for free
+                            <a class="amber-text text-darken-4" href="https://brill.com/view/title/56196">Buy a hardback copy or read digitally for free
                                 here</a>
 
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Begin Entry -->
+            <div class="mix book islam" date="20210920">
+                <div class="card horizontal">
+
+                    <div class="valign-wrapper hide-on-small-only">
+                        <img src="images/2021.Verlost.jpg" alt="" sizes="" srcset="">
+                    </div>
+                    <div class="card-stacked">
+
+                        <div class="card-content">
+                            <span class="new badge amber darken-4" data-badge-caption="">Book from 2021</span>
+                            <h4 class="header">Verlost van onzin</h4>
+                            <h5>Autobiografie van al-Ghazali</h5>
+
+                            <p>De bevlogen middeleeuwse denker Ghazali is nog altijd een bron van inspiratie voor miljoenen moslims. Ook in de westerse literatuur duikt de naam van Ghazali geregeld op. Daar wordt hij eensgezind aangewezen als een strenge dogmaticus. Wie was deze Ghazali en waar komt zijn reputatie vandaan? Kan het echt zo zijn dat hij het einde van het vrije denken in de islam inluidde? 
+                                In <i>Verlost van onzin</i> komt Ghazali zelf aan het woord. Deze toegankelijke vertaling van Ghazali’s autobiografie, voorzien van uitgebreide context en interpretatie, daagt de lezer uit om zelf te oordelen.</p>
+                            <blockquote class="blockBook">Amsterdam: Boom, 2021. ISBN:
+                                9789024438297. Pages: 224 pp.
+                            </blockquote>
+                        </div>
+                        <div class="card-action">
+                            <a class="amber-text text-darken-4" href="https://www.boomfilosofie.nl/product/100-10273_Verlost-van-onzin">Buy a hardback or paperback copy here</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Entry -->
             <!-- Begin Entry -->
             <div class="mix book islam commentaries" date="20170401">
                 <div class="card horizontal">
@@ -163,7 +191,7 @@
                             </blockquote>
                         </div>
                         <div class="card-action">
-                            <a class="amber-text text-darken-4" href="#">Buy a hardback or paperback copy here</a>
+                            <a class="amber-text text-darken-4" href="https://edinburghuniversitypress.com/book-the-world-of-image-in-islamic-philosophy.html">Buy a hardback or paperback copy here</a>
 
                         </div>
                     </div>
