--- a/World/index.html
+++ b/World/index.html
@@ -120,7 +120,7 @@
                 <a href="https://www.nwo.nl/onderzoek-en-resultaten/onderzoeksprojecten/i/36/29736.html">Veni Grant
                     #275-63-009</a>
             </p>
-            <p>I am the principal investigator of a grant running from July 2018 until June 2022.</p>
+            <p>I was the principal investigator of a grant running from July 2018 until June 2022.</p>
             <p><b>Additional funding acquired from the Open Access Fund and the IT Innovation Fund, Utrecht
                     University.</b></p>
         </div>
@@ -142,7 +142,7 @@
 
             <div class="resultsSuh" id="suhrArticles">
                 <img src="images/icon.files.svg">
-                <b> 6</b>
+                <b> 9</b>
                 peer-reviewed articles
             </div>
 
@@ -165,17 +165,12 @@
 
             <div class="resultsIA" id="IAArticles">
                 <img src="images/icon.files.svg">
-                <b> 3</b>
-                peer-reviewed articles in progress.
+                <b> 4</b>
+                peer-reviewed articles
             </div>
-
-            <div class="resultsIA" id="IAPanels">
-                <img src="images/icon.talk.svg">
-                <b> 1</b> international conference planned.</div>
-
             <div class="resultsIA" id="IATalks">
                 <img src="images/icon.chat.svg">
-                <b> 4</b> talks given so far.</div>
+                <b> 8</b> talks given so far</div>
         </div>
 
     </div>
