--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             ʿArabī's Reshaping of the Muslim Imagination <a href="World/index.html">here</a>.</p>
 
             <!-- <p style="text-align:right">Klik hier voor <a href="kebbieketsj/index.html">Kebbieketsj Consultancy</a></p> -->
-            <p>Came here for digitized manuscripts? <a href="https://mailchi.mp/4e6976ad6bd6/among-digitized-manuscripts">Subscribe to my newsletter now.</a> and if you haven't already, <a href="https://brill.com/view/title/56196">check out my book here.</a></p>
+            <p>Came here for digitized manuscripts? <a href="https://brill.com/view/title/56196">Check out my book here.</a></p>
 
         <div class="filters">
 
@@ -134,6 +134,35 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Begin Entry -->
+            <div class="mix book digital" date="20231204">
+                <div class="card horizontal">
+
+                    <div class="valign-wrapper hide-on-small-only">
+                        <img src="images/200.2023.DHinAsia.jpg" alt="" sizes="" srcset="">
+                    </div>
+                    <div class="card-stacked">
+
+                        <div class="card-content">
+                            <span class="new badge amber darken-4" data-badge-caption="">Book from 2023</span>
+                            <h4 class="header">Digital Humanities and Religions in Asia</h4>
+                            <h5>An Introduction</h5>
+
+                            <p>In pre-modern religions in the geographical context of Asia we encounter unique scripts, number systems, calendars, and naming conventions. These can make Western-built technologies – even tools specifically developed for digital humanities – an ill fit to our needs. The present volume explores this struggle and the limitations and potential opportunities of applying a digital humanities approach to pre-modern Asian religions. The authors cover Buddhism, Christianity, Daoism, Islam, Jainism, Judaism and Shintoism with chapters categorized according to their focus on: 1) temples, 2) manuscripts, 3) texts, and 4) social media. Thus, the volume guides readers through specific methodologies and practical examples while also providing a critical reflection on the state of the field, pushing the interface between digital humanities and pre-modern Asian religions into new territory.</p>
+                            <blockquote class="blockBook">Berlin: De Gruyter, 2023. ISBN:
+                                9783110747256. Pages: 332 pp.
+                            </blockquote>
+                        </div>
+                        <div class="card-action">
+                            <a class="amber-text text-darken-4" href="https://www.degruyter.com/document/doi/10.1515/9783110747607/html">Buy a paperback copy here</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Entry -->
+
             <!-- Begin Entry -->
             <div class="mix book islam" date="20210920">
                 <div class="card horizontal">
