--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
                 <div class="button-group js-radio-button-group" data-filter-group="type">
                     <button type="button" class="button btn control waves-effect is-checked" data-filter="">any</button>
                     <button type="button" class="button btn control waves-effect amber darken-4"
-                        data-filter=".book">Books</button>
+                        data-filter=".book">Books (4)</button>
                     <button type="button" class="button btn control waves-effect green darken-4"
-                        data-filter=".article">Articles</button>
+                        data-filter=".article">Articles (15)</button>
                     <button type="button" class="button btn control waves-effect deep-orange darken-4"
-                        data-filter=".review">Reviews</button>
+                        data-filter=".review">Reviews (9)</button>
                     <button type="button" class="button btn control waves-effect blue darken-4"
-                        data-filter=".video">Videos</button>
+                        data-filter=".video">Videos (6)</button>
                     <button type="button" class="button btn control waves-effect lime darken-4"
-                        data-filter=".podcast">Podcasts</button>
+                        data-filter=".podcast">Podcasts (2)</button>
                     <button type="button" class="button btn control waves-effect brown darken-4"
-                        data-filter=".software">Software</button>
+                        data-filter=".software">Software (5)</button>
                 </div>
             </div>
 
