--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
             visit my thematic page on my project on digital manuscript studies <a href="Among/index.html">here</a> and on my current project on Ibn
             ʿArabī's Reshaping of the Muslim Imagination <a href="World/index.html">here</a>.</p>
 
-            <!-- <p style="text-align:right">Klik hier voor <a href="kebbieketsj/index.html">Kebbieketsj Consultancy</a></p> -->
-            <p>Came here for digitized manuscripts? <a href="https://brill.com/view/title/56196">Check out my book here.</a></p>
-
         <div class="filters">
 
             <div class="ui-group">
@@ -135,6 +132,33 @@
                 </div>
             </div>
             
+  <!-- Begin Entry -->
+            <div class="mix article commentaries" date="20231001">
+                <div class="card horizontal">
+
+                    <div class="valign-wrapper hide-on-small-only">
+                        <img src="images/2023.TertiaVia.jpg" alt="" sizes="" srcset="">
+                    </div>
+                    <div class="card-stacked">
+
+                        <div class="card-content">
+                            <span class="new badge amber darken-4" data-badge-caption="">Article from 2023</span>
+                            <h4 class="header">Reconsidering Arabic Roots for the <i>Tertia Via</i></h4>
+                            <h5></h5>
+
+                            <p>This paper reopens the debate on the possibility that Aquinas borrowed his tertia via from a Latin translation of Maimonides ‘Guide for the Perplexed’. After introducing the text of the tertia via, I shall analyze the first part and conclude that while a ‘metaphysical’, tenseless reading is correct, we should not be nervous to call Aquinas’s reasoning for what it is: flawed. Framing the problematic passage in its historical context, I shall then argue that the flaw lies not so much with Aquinas, but with the source he was borrowing from. This is Maimonides’ <i>Dalālat al-ḥāʾirīn</i> (“The Guide for the Perplexed”), and in fact more specifically the blame is to be given to an early translator into Latin.</p>
+                            <blockquote class="blockBook">European Journal for the Study of Thomas Aquinas 41:1, pp. 1-20.
+                            </blockquote>
+                        </div>
+                        <div class="card-action">
+                            <a class="amber-text text-darken-4" href="https://sciendo.com/article/10.2478/ejsta-2023-0001">Download PDF here</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Entry -->
+
             <!-- Begin Entry -->
             <div class="mix book digital" date="20231204">
                 <div class="card horizontal">
